--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -88,19 +88,21 @@
             <div class="portfolio-info">
               <h3>《微微一笑很傾城》</h3>
               <ul>
-                <li><strong>演員</strong>: 任嘉倫＆白鹿</li>
-                <li><strong>集數</strong>: 24</li>
-                <li><strong>年份</strong>: 2021</li>
-                <li><strong>預告片</strong>: <a href="#">https://www.youtube.com/watch?v=hqF-taeNKAo</a></li>
+                <li><strong>演員</strong>: 楊洋＆鄭爽</li>
+                <li><strong>集數</strong>: 30</li>
+                <li><strong>年份</strong>: 2016</li>
+                <li><strong>預告片</strong>: <a href="#">https://youtu.be/vTbuZpFg-VY</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>評分：🌕🌕🌕🌕🌕／5</h2>
               <p>
-                這部真的大推！！追這部劇時心情不好，看這部剛好讓我哭好哭滿😂 這部是師徒戀，男女主彼此相愛卻無法在一起 兩個人的演技都超好很有代入感，服裝場景也都很棒，真的好喜歡周生辰跟十一🥺
+                男女主的設定完全就是理想中的情人，有顏值、有智商、有情商 男主肖奈真的好帥，每次看他出場都在內心尖叫😍
 
-                另外推薦大家一個小說作者 雁門不盡春（非原作者），他續寫了周生如故的故事，把結局改成HE，我覺得他改的很好，如果還走不出這部的朋朋可以看看~
+整部劇沒有誤會、沒有失憶、沒有難忘的前任、沒有惱人的表妹or未婚妻、沒有難搞的父母，只有灑不完的糖🍭💕 這部我真的太喜歡了，當初看完還馬上二刷！
 
+如果不喜歡遊戲劇情，堅持一下撐過前面幾集就很少出現了！看完這部後，我也看了很多好看的校園愛情劇，但這部始終在我心中的第一名屹立不搖
+沒看過的一定要看！！
               </p>
             </div>
           </div>
