--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -61,7 +61,7 @@
           <h2>陸劇推薦</h2>
           <ol>
             <li><a href="index.html">首頁</a></li>
-            <li>周生如故</li>
+            <li>步步驚心</li>
           </ol>
         </div>
 
@@ -77,7 +77,7 @@
           <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
                 </div>
 
               </div>
@@ -87,20 +87,21 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>《周生如故》</h3>
+              <h3>《步步驚心》</h3>
               <ul>
-                <li><strong>演員</strong>: 任嘉倫＆白鹿</li>
-                <li><strong>集數</strong>: 24</li>
-                <li><strong>年份</strong>: 2021</li>
-                <li><strong>預告片</strong>: <a href="#">https://www.youtube.com/watch?v=hqF-taeNKAo</a></li>
+                <li><strong>演員</strong>: 吳奇隆＆劉詩詩</li>
+                <li><strong>集數</strong>: 35</li>
+                <li><strong>年份</strong>: 2011</li>
+                <li><strong>預告片</strong>: <a href="#">https://youtu.be/0dTVlSL8HVk</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>評分：🌕🌕🌕🌕🌕／5</h2>
+              <h2>評分：🌕🌕🌕🌕🌘／4.2</h2>
               <p>
-                這部真的大推！！追這部劇時心情不好，看這部剛好讓我哭好哭滿😂 這部是師徒戀，男女主彼此相愛卻無法在一起 兩個人的演技都超好很有代入感，服裝場景也都很棒，真的好喜歡周生辰跟十一🥺
+                
+我本來是不喜歡穿越劇的，前幾年劇荒的時候，看網上說這部是陸劇的經典古裝劇，想說看個幾集試試，結果意外地愛上這部寶藏劇！在此推薦給因劇情設定為穿越就打退堂鼓的朋朋，前面幾集撐一下就過去了～
 
-                另外推薦大家一個小說作者 雁門不盡春（非原作者），他續寫了周生如故的故事，把結局改成HE，我覺得他改的很好，如果還走不出這部的朋朋可以看看~
+個人覺得這部劇有個小缺點就是女主跟男主、男二在一起時間相隔太短，劇情也有點瑪麗蘇，但以這是十年前的劇來說可以理解 而劇情方面把九子奪嫡的歷史跟生在那個朝代的諸多無奈呈現的淋漓盡致，因此很喜歡這部！
 
               </p>
             </div>
