--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -61,7 +61,7 @@
           <h2>陸劇推薦</h2>
           <ol>
             <li><a href="index.html">首頁</a></li>
-            <li>周生如故</li>
+            <li>花千骨</li>
           </ol>
         </div>
 
@@ -77,7 +77,7 @@
           <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-4.jpg" alt="">
                 </div>
 
               </div>
@@ -87,20 +87,21 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>《周生如故》</h3>
+              <h3>《花千骨》</h3>
               <ul>
-                <li><strong>演員</strong>: 任嘉倫＆白鹿</li>
-                <li><strong>集數</strong>: 24</li>
-                <li><strong>年份</strong>: 2021</li>
-                <li><strong>預告片</strong>: <a href="#">https://www.youtube.com/watch?v=hqF-taeNKAo</a></li>
+                <li><strong>演員</strong>: 霍建華＆趙麗穎</li>
+                <li><strong>集數</strong>: 50</li>
+                <li><strong>年份</strong>: 2015</li>
+                <li><strong>預告片</strong>: <a href="#">https://youtu.be/HANLLt8VxfY</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>評分：🌕🌕🌕🌕🌕／5</h2>
+              <h2>評分：🌕🌕🌕🌕🌖／4.8</h2>
               <p>
-                這部真的大推！！追這部劇時心情不好，看這部剛好讓我哭好哭滿😂 這部是師徒戀，男女主彼此相愛卻無法在一起 兩個人的演技都超好很有代入感，服裝場景也都很棒，真的好喜歡周生辰跟十一🥺
+                相愛卻不可說的師徒戀
+這部後面幾集洋蔥放很多，女主真的愛慘了男主，到最後都不捨得真的詛咒他😭 每次看最後一集都會爆哭
 
-                另外推薦大家一個小說作者 雁門不盡春（非原作者），他續寫了周生如故的故事，把結局改成HE，我覺得他改的很好，如果還走不出這部的朋朋可以看看~
+因為是幾年前的劇，特效可能有點落後，但劇情很精彩，真的值得一看！
 
               </p>
             </div>
