--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -61,7 +61,7 @@
           <h2>陸劇推薦</h2>
           <ol>
             <li><a href="index.html">首頁</a></li>
-            <li>周生如故</li>
+            <li>明天也想見到你</li>
           </ol>
         </div>
 
@@ -77,7 +77,7 @@
           <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-5.jpg" alt="">
                 </div>
 
               </div>
@@ -87,20 +87,19 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>《周生如故》</h3>
+              <h3>《明天也想見到你》</h3>
               <ul>
-                <li><strong>演員</strong>: 任嘉倫＆白鹿</li>
-                <li><strong>集數</strong>: 24</li>
-                <li><strong>年份</strong>: 2021</li>
-                <li><strong>預告片</strong>: <a href="#">https://www.youtube.com/watch?v=hqF-taeNKAo</a></li>
+                <li><strong>演員</strong>: 張康樂＆張楚寒</li>
+                <li><strong>集數</strong>: 12</li>
+                <li><strong>年份</strong>: 2022</li>
+                <li><strong>預告片</strong>: <a href="#">https://youtu.be/CqTvTjpRVsQ</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>評分：🌕🌕🌕🌕🌕／5</h2>
               <p>
-                這部真的大推！！追這部劇時心情不好，看這部剛好讓我哭好哭滿😂 這部是師徒戀，男女主彼此相愛卻無法在一起 兩個人的演技都超好很有代入感，服裝場景也都很棒，真的好喜歡周生辰跟十一🥺
-
-                另外推薦大家一個小說作者 雁門不盡春（非原作者），他續寫了周生如故的故事，把結局改成HE，我覺得他改的很好，如果還走不出這部的朋朋可以看看~
+                這部超甜😍 喜歡純純戀愛的大推👍
+劇情幾乎都圍繞在主角四人，但卻不會覺得單調，每個角色都好可愛好喜歡❤ 這部只有短短的12集 還沒看的趕快去看，入股不虧！
 
               </p>
             </div>
