--- a/portfolio-details8.html
+++ b/portfolio-details8.html
@@ -61,7 +61,7 @@
           <h2>陸劇推薦</h2>
           <ol>
             <li><a href="index.html">首頁</a></li>
-            <li>周生如故</li>
+            <li>一閃一閃亮星星</li>
           </ol>
         </div>
 
@@ -77,7 +77,7 @@
           <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-9.jpg" alt="">
                 </div>
 
               </div>
@@ -87,21 +87,22 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>《周生如故》</h3>
+              <h3>《一閃一閃亮星星》</h3>
               <ul>
-                <li><strong>演員</strong>: 任嘉倫＆白鹿</li>
+                <li><strong>演員</strong>: 張佳寧＆屈楚蕭</li>
                 <li><strong>集數</strong>: 24</li>
-                <li><strong>年份</strong>: 2021</li>
-                <li><strong>預告片</strong>: <a href="#">https://www.youtube.com/watch?v=hqF-taeNKAo</a></li>
+                <li><strong>年份</strong>: 2022</li>
+                <li><strong>預告片</strong>: <a href="#">https://youtu.be/Kw1FPu-_SNA</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>評分：🌕🌕🌕🌕🌕／5</h2>
               <p>
-                這部真的大推！！追這部劇時心情不好，看這部剛好讓我哭好哭滿😂 這部是師徒戀，男女主彼此相愛卻無法在一起 兩個人的演技都超好很有代入感，服裝場景也都很棒，真的好喜歡周生辰跟十一🥺
+                劇情跟《想見你》有點像，也是平行時空，但感覺這部比較沒那麼複雜，好懂一些
 
-                另外推薦大家一個小說作者 雁門不盡春（非原作者），他續寫了周生如故的故事，把結局改成HE，我覺得他改的很好，如果還走不出這部的朋朋可以看看~
+男主一直默默地守護著女主，女主卻不知道，真的超愛也超心疼，還好女主後來有回到過去才知道男主做的那些事 另外希望電影能有個好結局🙏
 
+全世界最好的張萬森 拜託去看！！
               </p>
             </div>
           </div>
