--- a/portfolio-details7.html
+++ b/portfolio-details7.html
@@ -61,7 +61,7 @@
           <h2>陸劇推薦</h2>
           <ol>
             <li><a href="index.html">首頁</a></li>
-            <li>周生如故</li>
+            <li>琉璃</li>
           </ol>
         </div>
 
@@ -77,7 +77,7 @@
           <div class="col-lg-8">
               <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-8.jpg" alt="">
                 </div>
 
               </div>
@@ -87,20 +87,19 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>《周生如故》</h3>
+              <h3>《琉璃》</h3>
               <ul>
-                <li><strong>演員</strong>: 任嘉倫＆白鹿</li>
-                <li><strong>集數</strong>: 24</li>
-                <li><strong>年份</strong>: 2021</li>
-                <li><strong>預告片</strong>: <a href="#">https://www.youtube.com/watch?v=hqF-taeNKAo</a></li>
+                <li><strong>演員</strong>: 成毅＆袁冰妍</li>
+                <li><strong>集數</strong>: 59</li>
+                <li><strong>年份</strong>: 2020</li>
+                <li><strong>預告片</strong>: <a href="#">https://youtu.be/_gN841MrPi8</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>評分：🌕🌕🌕🌕🌕／5</h2>
+              <h2>評分：🌕🌕🌕🌕🌘/4.2</h2>
               <p>
-                這部真的大推！！追這部劇時心情不好，看這部剛好讓我哭好哭滿😂 這部是師徒戀，男女主彼此相愛卻無法在一起 兩個人的演技都超好很有代入感，服裝場景也都很棒，真的好喜歡周生辰跟十一🥺
+                劇情方面很精彩，常常有反轉再反轉的感覺，伏筆也埋的很深，但男女主彼此誤會、配角一直干擾真的很討厭，不過男女主演技不錯，整體來說值得一看～
 
-                另外推薦大家一個小說作者 雁門不盡春（非原作者），他續寫了周生如故的故事，把結局改成HE，我覺得他改的很好，如果還走不出這部的朋朋可以看看~
 
               </p>
             </div>
