--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <h4>《三生三世枕上書》</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  「其實我們的前緣，僅僅是我曾經那樣的喜歡過你」
+                  其實我們的前緣，僅僅是我曾經那樣的喜歡過你
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -363,7 +363,7 @@
                 <h4>《微微一笑很傾城》</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  「我的女孩，為什麼不信任」
+                  我的女孩，為什麼不信任
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -376,7 +376,7 @@
                 <h4>《周生如故》</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  「辰此一生，不負天下，唯負十一」
+                  辰此一生，不負天下，唯負十一
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -389,7 +389,7 @@
                 <h4>明天也想見到你</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  「江侃你知道的吧，明天也想見到你這句話裡，最最重要的，是你」
+                  江侃你知道的吧，明天也想見到你這句話裡，最最重要的，是你
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -402,7 +402,7 @@
                 <h4>一閃一閃亮星星</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  「全世界在哪？」「全世界在你身後」
+                  全世界在哪？ 全世界在你身後
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
