--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -92,7 +92,7 @@
                 <li><strong>演員</strong>: 任嘉倫＆白鹿</li>
                 <li><strong>集數</strong>: 24</li>
                 <li><strong>年份</strong>: 2021</li>
-                <li><strong>預告片</strong>: <a href="#">https://www.youtube.com/watch?v=hqF-taeNKAo</a></li>
+                <li><strong>預告片</strong>: <a href="https://www.youtube.com/watch?v=hqF-taeNKAo">https://www.youtube.com/watch?v=hqF-taeNKAo</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
