--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -92,7 +92,7 @@
                 <li><strong>演員</strong>: 吳奇隆＆劉詩詩</li>
                 <li><strong>集數</strong>: 35</li>
                 <li><strong>年份</strong>: 2011</li>
-                <li><strong>預告片</strong>: <a href="#">https://youtu.be/0dTVlSL8HVk</a></li>
+                <li><strong>預告片</strong>: <a href="https://youtu.be/0dTVlSL8HVk">https://youtu.be/0dTVlSL8HVk</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
