--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -92,7 +92,7 @@
                 <li><strong>演員</strong>: 霍建華＆趙麗穎</li>
                 <li><strong>集數</strong>: 50</li>
                 <li><strong>年份</strong>: 2015</li>
-                <li><strong>預告片</strong>: <a href="#">https://youtu.be/HANLLt8VxfY</a></li>
+                <li><strong>預告片</strong>: <a href="https://youtu.be/HANLLt8VxfY">https://youtu.be/HANLLt8VxfY</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
