--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -92,7 +92,7 @@
                 <li><strong>演員</strong>: 張康樂＆張楚寒</li>
                 <li><strong>集數</strong>: 12</li>
                 <li><strong>年份</strong>: 2022</li>
-                <li><strong>預告片</strong>: <a href="#">https://youtu.be/CqTvTjpRVsQ</a></li>
+                <li><strong>預告片</strong>: <a href="https://youtu.be/CqTvTjpRVsQ">https://youtu.be/CqTvTjpRVsQ</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
