--- a/portfolio-details5.html
+++ b/portfolio-details5.html
@@ -92,7 +92,7 @@
                 <li><strong>演員</strong>: 白敬亭＆田曦薇</li>
                 <li><strong>集數</strong>: 40</li>
                 <li><strong>年份</strong>: 2022</li>
-                <li><strong>預告片</strong>: <a href="#">https://youtu.be/as6QfqB8Jt0</a></li>
+                <li><strong>預告片</strong>: <a href="https://youtu.be/as6QfqB8Jt0">https://youtu.be/as6QfqB8Jt0</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
