--- a/portfolio-details6.html
+++ b/portfolio-details6.html
@@ -92,7 +92,7 @@
                 <li><strong>演員</strong>: 高偉光＆迪麗熱巴</li>
                 <li><strong>集數</strong>: 56</li>
                 <li><strong>年份</strong>: 2020</li>
-                <li><strong>預告片</strong>: <a href="#">https://youtu.be/iVF5e2eMqLk</a></li>
+                <li><strong>預告片</strong>: <a href="https://youtu.be/iVF5e2eMqLk">https://youtu.be/iVF5e2eMqLk</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
