--- a/portfolio-details7.html
+++ b/portfolio-details7.html
@@ -92,7 +92,7 @@
                 <li><strong>演員</strong>: 成毅＆袁冰妍</li>
                 <li><strong>集數</strong>: 59</li>
                 <li><strong>年份</strong>: 2020</li>
-                <li><strong>預告片</strong>: <a href="#">https://youtu.be/_gN841MrPi8</a></li>
+                <li><strong>預告片</strong>: <a href="https://youtu.be/_gN841MrPi8">https://youtu.be/_gN841MrPi8</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
