--- a/portfolio-details8.html
+++ b/portfolio-details8.html
@@ -92,7 +92,7 @@
                 <li><strong>演員</strong>: 張佳寧＆屈楚蕭</li>
                 <li><strong>集數</strong>: 24</li>
                 <li><strong>年份</strong>: 2022</li>
-                <li><strong>預告片</strong>: <a href="#">https://youtu.be/Kw1FPu-_SNA</a></li>
+                <li><strong>預告片</strong>: <a href="https://youtu.be/Kw1FPu-_SNA">https://youtu.be/Kw1FPu-_SNA</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
