--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -91,7 +91,7 @@
                 <li><strong>演員</strong>: 楊洋＆鄭爽</li>
                 <li><strong>集數</strong>: 30</li>
                 <li><strong>年份</strong>: 2016</li>
-                <li><strong>預告片</strong>: <a href="#">https://youtu.be/vTbuZpFg-VY</a></li>
+                <li><strong>預告片</strong>: <a href="https://youtu.be/vTbuZpFg-VY">https://youtu.be/vTbuZpFg-VY</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
